Opened 12 years ago

Closed 11 years ago

#9938 closed bug (fixed)

[WebPositive] BrowserWindow.cpp: Potential leak of memory pointed to by 'threeDaysAgoMenu'

Reported by: mt Owned by: leavengood
Priority: normal Milestone: R1
Component: Applications/WebPositive Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

In BrowserWindow::_UpdateHistoryMenu(), addOrDeleteMenu() is missing for threeDaysAgoMenu, which causes memory leak for threeDaysAgoMenu. Please see attached report.

Attachments (2)

0022-Fix-memory-leak-for-threeDaysAgoMenu.patch (913 bytes ) - added by mt 12 years ago.
Patch
report-f5dac1.html (294.0 KB ) - added by mt 12 years ago.
Report by Clang Static Analyzer

Download all attachments as: .zip

Change History (4)

comment:1 by mt, 12 years ago

patch: 01

by mt, 12 years ago

Attachment: report-f5dac1.html added

Report by Clang Static Analyzer

comment:2 by mmadia, 11 years ago

Resolution: fixed
Status: newclosed

Applied in hrev46348. Thanks for the patch!

Note: See TracTickets for help on using tickets.