Fix memory leak for threeDaysAgoMenu

Fixes #9938.

Signed-off-by: Matt Madia <mattmadia@gmail.com>